[package]
name = "proxy_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8"
hex = "0.4.3"
ic-cdk = "0.6.1"
ic-cdk-macros = "0.6.1"
serde = "1.0.136"
serde_bytes = "0.11.5"

